# berry_espidf_firmware

./: .gitignore  CMakeLists.txt  berry_converter.py  partitions.csv  sample_script.be
components/berry/: CMakeLists.txt  be_compat.c
components/berry/default/: berry.c
main/: CMakeLists.txt  berry_espidf_project.c  berry_espidf_project.cpp  berry_runtime.c  berry_system.c
main/berry_modules/: mod_system.c
main/device_manager/: device_manager.cpp  device_manager.h  event_sink.h  events.h  wifi_manager.cpp  wifi_manager.h
